<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mdtp_transparent_black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_delete_header"
            style="@style/text_style_16_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/delete_header"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_delete_message"
            style="@style/text_style_16_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_delete" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/greyscale_900" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btn_cancel"
                style="@style/text_style_16_normal"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/greyscale_900" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/greyscale_900" />

            <TextView
                android:id="@+id/btn_delete"
                style="@style/text_style_16_normal"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>