<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.iSay1.roamstick.verifyOtp.viewModel.VerifyOtpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_otp_code_verification"
            style="@style/text_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/otp_code_verification"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_otp_message"
            style="@style/text_style_16_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:text="@string/we_have_sent_an_otp_code_to_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_otp_code_verification" />


        <EditText
            android:id="@+id/otp_digit_1"
            style="@style/text_style_14_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:background="@drawable/input_rectangles"
            android:elevation="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="number"
            android:maxLength="1"
            android:minWidth="60dp"
            android:minHeight="60dp"
            app:layout_constraintEnd_toStartOf="@+id/otp_digit_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_otp_message" />

        <EditText
            android:id="@+id/otp_digit_2"
            style="@style/text_style_14_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/input_rectangles"
            android:elevation="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="number"
            android:maxLength="1"
            android:minWidth="60dp"
            android:minHeight="60dp"
            app:layout_constraintBottom_toBottomOf="@+id/otp_digit_1"
            app:layout_constraintEnd_toStartOf="@+id/otp_digit_3"
            app:layout_constraintStart_toEndOf="@+id/otp_digit_1"
            app:layout_constraintTop_toTopOf="@+id/otp_digit_1" />

        <EditText
            android:id="@+id/otp_digit_3"
            style="@style/text_style_14_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/input_rectangles"
            android:elevation="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="number"
            android:maxLength="1"
            android:minWidth="60dp"
            android:minHeight="60dp"
            app:layout_constraintBottom_toBottomOf="@+id/otp_digit_2"
            app:layout_constraintEnd_toStartOf="@+id/otp_digit_4"
            app:layout_constraintStart_toEndOf="@+id/otp_digit_2"
            app:layout_constraintTop_toTopOf="@+id/otp_digit_2" />

        <EditText
            android:id="@+id/otp_digit_4"
            style="@style/text_style_14_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/input_rectangles"
            android:elevation="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="number"
            android:maxLength="1"
            android:minWidth="60dp"
            android:minHeight="60dp"
            app:layout_constraintBottom_toBottomOf="@+id/otp_digit_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/otp_digit_3"
            app:layout_constraintTop_toTopOf="@+id/otp_digit_3" />

        <TextView
            android:id="@+id/tv_did_not_received_otp"
            style="@style/text_style_16_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:text="@string/didn_t_receive_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp_digit_1" />

        <TextView
            android:id="@+id/tv_resend_email"
            style="@style/text_style_16_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:text="You can resend code in 48 s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_did_not_received_otp" />

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/button_background_container"
            android:onClick="@{viewModel::onVerifyClick}"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>