<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.iSay1.roamstick.login.viewModel.LoginFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_hello_there"
            style="@style/text_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:text="Hello there 👋"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_message"
            style="@style/text_style_16_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:text="@string/please_enter_your_phone_number_msg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hello_there" />

        <TextView
            android:id="@+id/tv_phone_number"
            style="@style/text_style_16_bold"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_message" />

        <EditText
            android:id="@+id/edt_email"
            style="@style/text_style_14_normal"
            android:layout_width="0dip"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="5dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColorHint="@color/greyscale_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone_number" />

        <View
            android:id="@+id/view_green_underline"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/blue_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <TextView
            android:id="@+id/tv_password"
            style="@style/text_style_16_bold"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_green_underline" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/greyscale_900">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                style="@style/text_style_14_normal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:inputType="textPassword|textNoSuggestions"
                android:paddingStart="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view_password_underline"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/blue_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input" />

        <CheckBox
            android:id="@+id/check_box_terms_and_conditions"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:button="@drawable/app_checkbox_selector"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@+id/tv_terms_and_condition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_terms_and_condition" />

        <TextView
            android:id="@+id/tv_terms_and_condition"
            style="@style/text_style_16_normal"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginEnd="20dp"
            android:text="I agree to Roam Stick Public Agreement, Terms, Privacy Policy, and confirm that I am over 17 years old."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/check_box_terms_and_conditions"
            app:layout_constraintTop_toBottomOf="@+id/view_password_underline" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/button_background_container"
            android:onClick="@{viewModel::onLoginClick}"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>